Added RUM Javascript snippet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script>(function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.getElementsByTagName('script')[0]);})('cwr','d8c56575-fdc2-4037-977b-0c01df19568d','1.0.0','us-east-1','https://client.rum.us-east-1.amazonaws.com/1.0.2/cwr.js',{sessionSampleRate:1,guestRoleArn:"arn:aws:iam::469298696772:role/RUM-Monitor-us-east-1-469298696772-0282878138361-Unauth",identityPoolId:"us-east-1:566440fd-400b-4c5c-86d8-4f7e3d7f4917",endpoint:"https://dataplane.rum.us-east-1.amazonaws.com",telemetries:["performance","errors","http"],allowCookies:true,enableXRay:true});</script>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
