--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -37,7 +37,8 @@
       <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
         <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-          <pre><code>$ cd your_repo_root/repo_name
+          <pre><code>
+	  	$ cd your_repo_root/repo_name
 		$ git fetch origin
 		$ git checkout gh-pages
 	  </code></pre>
@@ -60,7 +61,7 @@
         <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
         <br>      
         <b>12. Unknown</b><br>
-        <img src="https://www.planetware.com/wpimages/2019/02/scotland-best-places-to-visit-fort-williams.jpg"/>
+        <img src="https://www.planetware.com/wpimages/2018/12/scotland-fort-william-attractions-ben-nevis.jpg"/>
 
       <h3>
       <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
