--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <script>(function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.getElementsByTagName('script')[0]);})('cwr','32d24e4a-97b1-466d-a3f4-7a380fbd2fb7','1.0.0','us-east-1','https://client.rum.us-east-1.amazonaws.com/1.0.2/cwr.js',{sessionSampleRate:1,guestRoleArn:"arn:aws:iam::469298696772:role/RUM-Monitor-us-east-1-469298696772-2321140238361-Unauth",identityPoolId:"us-east-1:cff2dd07-7fb0-4784-858f-1a5895c4cb28",endpoint:"https://dataplane.rum.us-east-1.amazonaws.com",telemetries:["performance","errors","http"],allowCookies:true,enableXRay:false});</script>
     <meta charset="UTF-8">
-    <title>Docs by rbhogi</title>
+    <title>Demo Page for Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
