--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <script>(function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.getElementsByTagName('script')[0]);})('cwr','a5a2b373-0029-47ac-80f6-0182e798b863','1.0.0','us-east-1','https://client.rum.us-east-1.amazonaws.com/1.0.2/cwr.js',{sessionSampleRate:1,guestRoleArn:"arn:aws:iam::469298696772:role/Admin",identityPoolId:"us-east-1:e4264421-c5bc-4d4b-b156-a239a9f75a93",endpoint:"https://dataplane.rum.us-east-1.amazonaws.com",telemetries:["performance","errors","http"],allowCookies:true,enableXRay:false});</script>
+    <script>(function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.getElementsByTagName('script')[0]);})('cwr','15e6f7f0-3dbd-4bf5-9da2-23ab47b5a13c','1.0.0','us-east-1','https://client.rum.us-east-1.amazonaws.com/1.0.2/cwr.js',{sessionSampleRate:1,guestRoleArn:"arn:aws:iam::469298696772:role/RUM-Monitor-us-east-1-469298696772-9937583648361-Unauth",identityPoolId:"us-east-1:58d2303a-f168-40eb-9b2a-f0c3d748f609",endpoint:"https://dataplane.rum.us-east-1.amazonaws.com",telemetries:["performance","errors","http"],allowCookies:true,enableXRay:true});</script>
     <meta charset="UTF-8">
     <title>Demo Page for Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
