--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <script>(function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.getElementsByTagName('script')[0]);})('cwr','1531cea5-14e3-418e-a6db-377669129d4d','1.0.0','us-east-1','https://client.rum.us-east-1.amazonaws.com/1.0.2/cwr.js',{sessionSampleRate:1,guestRoleArn:"arn:aws:iam::750664202209:role/RUM-Monitor-us-east-1-750664202209-5198049159361-Unauth",identityPoolId:"us-east-1:de04a8cd-72ac-4463-af1a-096e2a1c0e46",endpoint:"https://dataplane.rum.us-east-1.amazonaws.com",telemetries:["performance","errors","http"],allowCookies:true,enableXRay:false});</script>
+    <script>(function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.getElementsByTagName('script')[0]);})('cwr','15e6f7f0-3dbd-4bf5-9da2-23ab47b5a13c','1.0.0','us-east-1','https://client.rum.us-east-1.amazonaws.com/1.0.2/cwr.js',{sessionSampleRate:1,guestRoleArn:"arn:aws:iam::469298696772:role/RUM-Monitor-us-east-1-469298696772-5358155004461-Unauth",identityPoolId:"us-east-1:13fcac02-eb3f-4427-8120-1db0799dd62b",endpoint:"https://dataplane.rum.us-east-1.amazonaws.com",telemetries:["performance","errors","http"],allowCookies:true,enableXRay:true});</script>
     <meta charset="UTF-8">
     <title>Demo Page for Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
