--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -4,21 +4,22 @@
 <script>
   (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
     'cwr',
-    'abcc9ef2-56c3-4bea-9333-74f9329bca4b',
+    'affe0a41-6101-4f3f-87fe-0b3cb18d44fb',
     '1.0.0',
     'us-east-1',
     'https://client.rum.us-east-1.amazonaws.com/1.2.1/cwr.js',
     {
       sessionSampleRate: 1,
-      guestRoleArn: "arn:aws:iam::750664202209:role/RUM-Monitor-us-east-1-750664202209-4627972039461-Unauth",
-      identityPoolId: "us-east-1:889a2e9f-cf09-4e30-9cae-55dbdf2a59f1",
+      guestRoleArn: "arn:aws:iam::750664202209:role/RUM-Monitor-us-east-1-750664202209-1047387439461-Unauth",
+      identityPoolId: "us-east-1:429d9273-facc-469e-93e8-d356f533ae30",
       endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
       telemetries: ["performance","errors","http"],
       allowCookies: true,
       enableXRay: false
     }
   );
-</script>    <meta charset="UTF-8">
+</script>
+<meta charset="UTF-8">
     <title>Demo Page for Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
