--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -4,15 +4,15 @@
 <script>
   (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
     'cwr',
-    'affe0a41-6101-4f3f-87fe-0b3cb18d44fb',
+    '2ed6def1-fbc7-4b4f-8aa9-c8d31e9cfac4',
     '1.0.0',
-    'us-east-1',
+    'us-west-2',
     'https://client.rum.us-east-1.amazonaws.com/1.2.1/cwr.js',
     {
       sessionSampleRate: 1,
-      guestRoleArn: "arn:aws:iam::750664202209:role/RUM-Monitor-us-east-1-750664202209-4627972039461-Unauth",
-      identityPoolId: "us-east-1:889a2e9f-cf09-4e30-9cae-55dbdf2a59f1",
-      endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
+      guestRoleArn: "arn:aws:iam::750664202209:role/RUM-Monitor-us-west-2-750664202209-4204550539461-Unauth",
+      identityPoolId: "us-west-2:8a91c4ef-3b3c-406d-bb72-bd3de6d92148",
+      endpoint: "https://dataplane.rum.us-west-2.amazonaws.com",
       telemetries: ["performance","errors","http"],
       allowCookies: true,
       enableXRay: false
