--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -12,7 +12,7 @@
       sessionSampleRate: 1,
       guestRoleArn: "arn:aws:iam::750664202209:role/RUM-Monitor-us-west-2-750664202209-4204550539461-Unauth",
       identityPoolId: "us-west-2:8a91c4ef-3b3c-406d-bb72-bd3de6d92148",
-      endpoint: "https://dataplane.rum.us-west-2.amazonaws.com",
+      endpoint: "https://dataplane.rum-beta.us-west-2.amazonaws.com",
       telemetries: ["performance","errors","http"],
       allowCookies: true,
       enableXRay: false
