--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -4,17 +4,17 @@
 <script>
   (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
     'cwr',
-    '2ed6def1-fbc7-4b4f-8aa9-c8d31e9cfac4',
-    '1.0.0',
-    'us-west-2',
-    'https://client.rum.us-east-1.amazonaws.com/1.5.1/cwr.js',
+    '15e6f7f0-3dbd-4bf5-9da2-23ab47b5a13c',
+    '1.5.1',
+    'us-east-1',
+    'https://client.rum.us-east-1.amazonaws.com/1.2.1/cwr.js',
     {
       sessionSampleRate: 1,
-      guestRoleArn: "arn:aws:iam::750664202209:role/RUM-Monitor-us-west-2-750664202209-4204550539461-Unauth",
-      identityPoolId: "us-west-2:8a91c4ef-3b3c-406d-bb72-bd3de6d92148",
-      endpoint: "https://dataplane.rum-beta.us-west-2.amazonaws.com",
+      guestRoleArn: "arn:aws:iam::469298696772:role/RUM-Monitor-us-east-1-469298696772-5358155004461-Unauth",
+      identityPoolId: "us-east-1:13fcac02-eb3f-4427-8120-1db0799dd62b",
+      endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
       telemetries: ["performance","errors","http"],
-      allowCookies: true,
+      allowCookies: false,
       enableXRay: false
     }
   );
