--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -4,17 +4,17 @@
 <script>
   (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
     'cwr',
-    '15e6f7f0-3dbd-4bf5-9da2-23ab47b5a13c',
+    'c39652cf-3f06-4db7-83d4-ae26772fcdb4',
     '1.0.0',
     'us-east-1',
-    'https://client.rum.us-east-1.amazonaws.com/1.5.1/cwr.js',
+    'https://client.rum.us-east-1.amazonaws.com/1.2.1/cwr.js',
     {
       sessionSampleRate: 1,
-      guestRoleArn: "arn:aws:iam::469298696772:role/RUM-Monitor-us-east-1-469298696772-5358155004461-Unauth",
-      identityPoolId: "us-east-1:13fcac02-eb3f-4427-8120-1db0799dd62b",
+      guestRoleArn: "arn:aws:iam::409445005553:role/RUM-Monitor-us-east-1-409445005553-2631178633561-Unauth",
+      identityPoolId: "us-east-1:0b6524a7-2932-46a7-8ea4-b2d259e03867",
       endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
       telemetries: ["performance","errors","http"],
-      allowCookies: false,
+      allowCookies: true,
       enableXRay: false
     }
   );
