--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -12,7 +12,7 @@
       sessionSampleRate: 1,
       guestRoleArn: "arn:aws:iam::469298696772:role/RUM-Monitor-us-east-1-469298696772-5358155004461-Unauth",
       identityPoolId: "us-east-1:13fcac02-eb3f-4427-8120-1db0799dd62b",
-      endpoint: "https://dataplane.rum-beta.us-east-1.amazonaws.com",
+      endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
       telemetries: ["performance","errors","http"],
       allowCookies: false,
       enableXRay: true
