--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -4,18 +4,18 @@
 <script>
   (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
     'cwr',
-    '15e6f7f0-3dbd-4bf5-9da2-23ab47b5a13c',
+    '78355b24-e09f-4c10-ab43-a161313fc9ef',
     '1.0.0',
-    'us-east-1',
+    'us-west-2',
     'https://client.rum.us-east-1.amazonaws.com/1.5.x/cwr.js',
     {
       sessionSampleRate: 1,
-      guestRoleArn: "arn:aws:iam::469298696772:role/RUM-Monitor-us-east-1-469298696772-5358155004461-Unauth",
-      identityPoolId: "us-east-1:13fcac02-eb3f-4427-8120-1db0799dd62b",
-      endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
+      guestRoleArn: "arn:aws:iam::973532300540:role/RUM-Monitor-us-west-2-973532300540-3957584324561-Unauth",
+      identityPoolId: "us-west-2:f9669674-4b5a-404b-87c8-e5d81e848995",
+      endpoint: "https://dataplane.rum.us-west-2.amazonaws.com",
       telemetries: ["performance","errors","http"],
-      allowCookies: false,
-      enableXRay: true
+      allowCookies: true,
+      enableXRay: false
     }
   );
 </script>
