--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -15,7 +15,7 @@
       endpoint: "https://dataplane.rum.us-west-2.amazonaws.com",
       telemetries: ["performance","errors","http"],
       allowCookies: true,
-      enableXRay: false
+      enableXRay: true
     }
   );
 </script>
