--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -14,7 +14,7 @@
       identityPoolId: "us-east-1:889a2e9f-cf09-4e30-9cae-55dbdf2a59f1",
       endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
       telemetries: ["performance","errors","http"],
-      allowCookies: false,
+      allowCookies: true,
       enableXRay: false
     }
   );
