--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -17,19 +17,22 @@
       allowCookies: true,
       enableXRay: false,
       sessionAttributes: {
-	"aws:inValidAttribute" : "testing",
-      	"invalid.Char" : "testing",
-      	"validCustomAttribute1" : "!@#$%%^&*",
-      	"valid_Custom_Attribute2" : "+_)(",
-      	"valid:Custom_Attribute3" : "{}|:\";',./<>?",
-      	"validCustomAttribute4" : "testing4",
-      	"validCustomAttribute5" : "testing5",
-      	"validCustomAttribute6" : "testing6",
-      	"validCustomAttribute7" : "testing7",
-      	"validCustomAttribute8" : "testing8",
-      	"validCustomAttribute9" : "testing9",
-      	"validCustomAttribute10" : "testing10",
-      	"validCustomAttribute11" : "testing11",
+	"version" : "customVersion",
+      	"browserLanguage" : "customAttriuteValue",
+	"browserName" : "customAttriuteValue",
+	"browserVersion" : "customAttriuteValue",
+	"osName" : "customAttriuteValue",
+	"osVersion" : "customAttriuteValue",
+	"deviceType" : "customAttriuteValue",
+	"platformType" : "customAttriuteValue",
+	"pageId" : "customAttriuteValue",
+	"interaction" : "customAttriuteValue",
+	"title" : "customAttriuteValue",
+	"domain" : "customAttriuteValue",
+	"countryCode" : "customAttriuteValue",
+	"subdivisionCode" : "customAttriuteValue",      
+      	"!@#$%^&*(()" : "!@#$%%^&*",
+	"validCustomAttribute": "customAttriuteValue"
       }
     }
   );
