Test Auth failure

--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -11,7 +11,7 @@
     {
       sessionSampleRate: 1,
       guestRoleArn: "arn:aws:iam::130597286607:role/RUM-Monitor-us-west-2-130597286607-7082801836661-Unauth",
-      identityPoolId: "us-west-2:080f7838-3e40-4054-a528-3720d2603679",
+      identityPoolId: "00000000",
       endpoint: "https://dataplane.rum.us-west-2.amazonaws.com",
       telemetries: ["performance","errors","http"],
       allowCookies: true,
