Add remote config

--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
 <script>
-  (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
+  (function(n,i,v,r,s,c,u,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c,u:u};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
     'cwr',
     '7b8b5775-ee1e-4c78-9aac-eecc7136ebad',
     '1.0.0',
@@ -34,7 +34,8 @@
       	"!@#$%^&*(()" : "!@#$%%^&*",
 	"validCustomAttribute": "customAttriuteValue"
       }
-    }
+    },
+    ""
   );
 </script>
 <meta charset="UTF-8">
