--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -2,40 +2,21 @@
 <html lang="en-us">
   <head>
 <script>
-  (function(n,i,v,r,s,c,u,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c,u:u};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
+  (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
     'cwr',
-    '7b8b5775-ee1e-4c78-9aac-eecc7136ebad',
+    '88bba338-5e73-48d8-9b18-6f9e80cb6c9a',
     '1.0.0',
-    'us-west-2',
-    'https://client.rum.us-east-1.amazonaws.com/1.10.x/cwr.js',
+    'us-east-1',
+    'https://client.rum.us-east-1.amazonaws.com/1.14.0/cwr.js',
     {
       sessionSampleRate: 1,
-      guestRoleArn: "arn:aws:iam::130597286607:role/RUM-Monitor-us-west-2-130597286607-7082801836661-Unauth",
-      identityPoolId: "00000000",
-      endpoint: "https://dataplane.rum.us-west-2.amazonaws.com",
+      guestRoleArn: "arn:aws:iam::469298696772:role/RUM-Monitor-us-east-1-469298696772-6474561140961-Unauth",
+      identityPoolId: "us-east-1:3638920f-96f1-4c25-bb2a-ee7eb0c23056",
+      endpoint: "https://dataplane.rum.us-east-1.amazonaws.com",
       telemetries: ["performance","errors","http"],
       allowCookies: true,
-      enableXRay: false,
-      sessionAttributes: {
-	"version" : "customVersion",
-      	"browserLanguage" : "customAttriuteValue",
-	"browserName" : "customAttriuteValue",
-	"browserVersion" : "customAttriuteValue",
-	"osName" : "customAttriuteValue",
-	"osVersion" : "customAttriuteValue",
-	"deviceType" : "customAttriuteValue",
-	"platformType" : "customAttriuteValue",
-	"pageId" : "customAttriuteValue",
-	"interaction" : "customAttriuteValue",
-	"title" : "customAttriuteValue",
-	"domain" : "customAttriuteValue",
-	"countryCode" : "customAttriuteValue",
-	"subdivisionCode" : "customAttriuteValue",      
-      	"!@#$%^&*(()" : "!@#$%%^&*",
-	"validCustomAttribute": "customAttriuteValue"
-      }
-    },
-    ""
+      enableXRay: true
+    }
   );
 </script>
 <meta charset="UTF-8">
