--- a/e2e-demo/index.html
+++ b/e2e-demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-<script>
+<!-- <script>
   (function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.head.getElementsByTagName('script')[0]);})(
     'cwr',
     '88bba338-5e73-48d8-9b18-6f9e80cb6c9a',
@@ -18,7 +18,7 @@
       enableXRay: true
     }
   );
-</script>
+</script> -->
 <meta charset="UTF-8">
     <title>Demo Page for Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
